--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 
 
-<div class="map-section">
+<div class="map-section" id="map-section">
   <h2>Explore Belgrade</h2>
   <p>Discover the city's most iconic spots and get a street view of some of the famous landmarks.</p>
   <div class="map-container">
